Add structured logging with custom fields

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=otel-demo
+logging.level.root=INFO
+logging.level.com.shahidyousuf.otel_demo=DEBUG
+spring.output.ansi.enabled=never
+spring.main.banner-mode=off
