feat(metrics): instrument endpoints with Micrometer counters/timers and add OTLP registry dependency
- Add micrometer-registry-otlp dependency
- Instrument /hello and /work with Counter and Timer
- Emit endpoint tag for Prometheus-friendly labels

--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'net.logstash.logback:logstash-logback-encoder:9.0'
     implementation 'io.opentelemetry:opentelemetry-api:1.58.0'
+    implementation 'io.micrometer:micrometer-registry-otlp:1.14.3'
     // Pin OpenTelemetry Java agent
     otelAgent 'io.opentelemetry.javaagent:opentelemetry-javaagent:2.24.0'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
