fix(metrics): align OTLP temporality to cumulative and remove unsupported override
- Set Micrometer OTLP temporality via properties to CUMULATIVE
- Remove @Override of temporality method not present in micrometer-registry-otlp 1.14.x
- Update .env to cumulative temporality for clarity

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,6 +17,7 @@ management.otlp.metrics.export.step=10s
 management.otlp.metrics.export.connect-timeout=5s
 management.otlp.metrics.export.read-timeout=10s
 management.otlp.metrics.export.resource-attributes=service.name=${spring.application.name},service.version=${project.version:0.0.1}
+management.otlp.metrics.export.temporality=CUMULATIVE
 
 # Global metric tags and useful histograms for HTTP timers
 management.metrics.tags.service=${spring.application.name}
@@ -35,6 +36,7 @@ management.metrics.export.otlp.enabled=true
 management.metrics.export.otlp.url=${GRAFANA_OTLP_METRICS_URL:${GRAFANA_OTLP_GATEWAY_URL}}
 management.metrics.export.otlp.step=10s
 management.metrics.export.otlp.headers[Authorization]=${GRAFANA_OTLP_HEADERS_AUTHORIZATION:Bearer ${GRAFANA_OTLP_TOKEN:}}
+management.metrics.export.otlp.temporality=CUMULATIVE
 
 # Use default server.port (8080)
 
